# MindLore

./: .cursorrules  .env.example  .gitignore  Makefile  README.md  app.db  docker-compose.yml  env.example  requirements.txt  ruff.toml
.github/workflows/: ci.yml
app/: main.py
backend/: .dockerignore  Dockerfile  pyproject.toml  pytest.ini  ruff.toml
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  health.py  suggestions.py  topics.py
backend/app/context/: __init__.py  store.py
backend/app/core/: config.py  db.py
backend/app/models/: __init__.py  draft.py  suggestion.py  topic.py
backend/app/prompts/: repository.py
backend/app/suggestions/: service.py
backend/tests/: conftest.py  test_app.py  test_config.py  test_context_store.py  test_db.py  test_dependencies.py  test_draft_model.py  test_health.py  test_openai_client.py  test_prompt_rendering.py  test_prompt_repository.py  test_smoke.py  test_startup_tables.py  test_suggestion_model.py  test_suggestion_parser.py  test_suggestion_service.py  test_suggestions_api.py  test_suggestions_persistence_api.py  test_topic_model.py  test_topics_api.py
docs/: angie_jones_review_prompt.md  config.md  context_snapshot.md  env.example  plan_for_mindlore.md  project_outline.md  review_prompt.md
frontend/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  (+7 more)
prompts/: topics_first.md
tests/: test_angles.py  test_ideas.py  test_style_guides.py
web/: package 2.json  package-lock.json  package.json  tsconfig 2.json  tsconfig.json
(+17 files in other folders)
