[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mindlore-backend"
version = "0.0.1"
description = "MindLore backend (FastAPI)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.2",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "black>=24.8.0",
  "ruff>=0.6.8",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.23.8",
  "httpx>=0.27.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
