[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mindlore-backend"
version = "0.0.1"
description = "MindLore backend (FastAPI)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.1",
  "sqlmodel>=0.0.22",
  "aiosqlite>=0.20.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.8",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.23.8",
  "httpx>=0.27.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools]
packages = ["app"]
